--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,48 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html {
+    --backgroundColor: #f7f6f3;
+    --titleColor: #0d0d0d;
+    --primaryColor: #88ab8e;
+    --primaryColorDark: #6c8872;
+    --secondaryColor: #f6e8d8;
+    --secondaryColorDark: #f6bc7a;
+    --secondaryColorLight: #fce8d5;
+    overflow-x: hidden;
+    --defaultBorderRadius: 3px;
+    background-color: var(--backgroundColor);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+::-webkit-scrollbar {
+    appearance: auto;
+    -webkit-appearance: none;
+    width: 8px;
 }
 
-html,
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    --sideLeftMargin: 3%;
+    --sideRightMargin: 3%;
+    --headerHeight: 160px;
+    --tabsHeight: 52px;
+    --socialMediaIconSize: 48px;
+    font-family: 'Roboto', serif;
+    background-color: var(--backgroundColor);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#__next {
+    background-color: var(--backgroundColor);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+#safari {
+    background-color: var(--backgroundColor);
 }
